fix spacing

--- a/editor/css/panes/web.css
+++ b/editor/css/panes/web.css
@@ -4,9 +4,9 @@
 }
 
 .code-editor{
-    width: 85%;
+    flex: 1
 }
 
 .filesystem-sidebar{
-    width: 15%;
+    width: 10vw;
 }
